src/App.css
:root, html, body, input, select, option {
    --background: #030b21;
    --field: #2D324E;
    --input: #4D5376;

    --field-background-positive: #2D404E;
    --field-background-negative: #362D4E;
    
    --secundary-font: #ABB2DA;
    --primary-font: #FFFFFF;

    --positive-value-font: #48FFB2;
    --positive-value-background: #00594A;
    --negative-value-font: #FFCECE;
    --negative-value-background: #860028;

    font-family: dystopian, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color: var(--primary-font);

    background-color: var(--background);
    box-sizing: border-box;
    margin: 0;
}

/* vars für Abstände usw. festlegen? Können dann einfacher mit Mediaquerys geändert werden? */
.loader {
    display: flex;
    align-items: center;
    height: 82px;

    font-size: 2rem;
    color: var(--secundary-font);
}

.loader::before {
    content: "";
    width: 1rem;
    height: 1rem;
    border: 5px solid var(--input);
    border-top-color: var(--secundary-font);
    margin-right: 15px;
    border-radius: 50%;
    animation: loading 1s ease infinite;
}

@keyframes loading {
    to {
        transform: rotate(1turn);
    }
} 


.field {
    background-color: var(--field);
    padding: 20px;
    margin: 15px;
    border-radius: 25px;
    max-width: 450px;
    position: relative;
}
form.field {
    margin-bottom: 35px;
}
div.field {
    padding: 12px 17px 7px 12px;
}
.field-positive {
    background-color: var(--field-background-positive);
}
.field-negative {
    background-color: var(--field-background-negative);
}

p {
    font-size: 0.9rem;
    color: var(--secundary-font);
    text-transform: uppercase;
    letter-spacing: 1.5px;

    margin: 15px 0 5px 17px;
}
.currency-name {
    margin: 0;

    font-size: 0.95rem;
}

.currency-price {
    margin: -7px 0 0 0;

    font-size: 2.3rem;
    color: var(--primary-font);
}
.symbol {
    float: left;
    margin: 5px 5px 0 0;

    font-size: 1.3rem;
    color: var(--secundary-font);
    letter-spacing: 1px;
    text-transform: none;
}

.change {
    /* width: 65px; */
    height: 30px;
    border-radius: 7px;
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    right: 20px;
    top: 27px;
    padding: 1px 8px;
}
.positive {
    background-color: var(--positive-value-background);
}
.positive p {
    margin: 0 0 0 5px;
    color: var(--positive-value-font);
}
.negative {
    background-color: var(--negative-value-background);
}
.negative p {
    margin: 0;
    color: var(--negative-value-font);
}

input, select, option {
    background-color: var(--input);
    border: none;
    border-radius: 15px;
    height: 50px;
    width: 100%;
    padding: 0 0 2px 15px;

    font-size: 1.3rem;
    letter-spacing: 0.5px;
    color: var(--primary-font);
}

select {
    -moz-appearance: none; /* Firefox */
    -webkit-appearance: none; /* Safari and Chrome */
    appearance: none;
}
.select-wrapper {
    position: relative;
}
.select-wrapper.last {
    width: calc(100% - 65px);
}
.select-wrapper::after {
    content: "";
    width: 13px;
    height: 13px;
    border-bottom: solid var(--secundary-font) 4px;
    border-right: solid var(--secundary-font) 4px;
    display: inline-block;
    position: absolute;
    right: 20px;
    top: 12px;
    transform: rotate(45deg);
}

option {
    padding: 30px;
    margin: 30px;
    font-size: 1.4rem;
    line-height: 30px;
}

button {
    background-color: var(--field);
    border: solid var(--secundary-font) 3.5px;
    border-radius: 15px;
    height: 50px;
    width: 50px;
    padding: 0 7px 8px 7px;
    cursor: pointer;
    position: absolute;
    right: 20px;
    bottom: 21px;

    color: var(--secundary-font);
    font-size: 3rem;
    line-height: 0;

    transition: all 175ms ease-in-out;
}

button:hover {
    background-color: var(--secundary-font);
    color: var(--field);
}

.currency-container {
    display: flex;
    align-items: center;
}

img {
    width: 60px;
    height: 60px;
    margin-right: 17px;
    margin-bottom: 5px;
}

/* Focus, Active usw. states hinzufügen */

